# cpp-tasks

./: CMakeLists.txt  README.md  compress.cpp  levenstein.cpp  main.cpp  recursion.cpp  relocate.cpp  sorts.cpp  supercomputer.cpp
final_test1/: boris_cat.cpp  compress.cpp  cyberimplant.cpp  detector.cpp  tiling.cpp
lists/: reverse.cpp  ring.cpp
trees/: tree.cpp  tree.h  tree_test.cpp
