cmake_minimum_required(VERSION 3.21)
project(cpp_tasks)

set(CMAKE_CXX_STANDARD 23)

add_executable(relocate relocate.cpp)
add_executable(cpp_tasks main.cpp)
add_executable(recursion recursion.cpp)
add_executable(sorts sorts.cpp)
add_executable(boris_cat final_test1/boris_cat.cpp)
add_executable(tiling final_test1/tiling.cpp)
add_executable(compress final_test1/compress.cpp)
add_executable(lists1 lists/reverse.cpp)
add_executable(lists2 lists/ring.cpp)
add_executable(supercomputer supercomputer.cpp)